<resources>
    <string name="app_name">同蚁商城</string>
    <string name="app_channel_name">应用宝</string>
    <string name="ok">确定</string>
    <string name="share">分享</string>
    <string name="back">返回</string>
    <string name="close">关闭</string>
    <string name="reset">重置</string>
    <string name="cancel">取消</string>
    <string name="open">打开</string>
    <string name="save">保存</string>
    <string name="more">更多</string>
    <string name="setting">设置</string>
    <string name="complete">完成</string>
    <string name="select_all">全选</string>
    <string name="loading_text">请稍等...</string>
    <string name="exit_message">再按一次返回键退出应用</string>
    <string name="update">更新</string>
    <string name="update_newest_app">更新应用</string>
    <string name="shop_service_query_card">美通卡查询</string>
    <string name="shop_service_query_card_hint">请输入你的美通卡账号</string>
    <string name="charge">充值</string>
    <string name="meitong_card_charge_title">美通券充值</string>
    <string name="meitong_card_charge_no">请输入美通券券号</string>
    <string name="meitong_card_charge_secret">请输入美通券密码</string>
    <string name="charge_online_charge">在线充值</string>
    <string name="charge_withdraw">提现</string>
    <string name="actionbar_button_scanner">扫一扫</string>
    <string name="actionbar_button_assort">分类</string>
    <string name="actionbar_search_keywords">搜索商品</string>
    <string name="tabbar_title1">商店</string>
    <string name="tabbar_title2">推荐</string>
    <string name="tabbar_filter">美化</string>
    <string name="tabbar_title3"> 购物车</string>
    <string name="tabbar_title4">我</string>
    <string name="account_center">个人中心</string>
    <string name="sec_killed">秒杀</string>
    <string name="group_buy">秒杀</string>
    <string name="pre_sell">新鲜预售</string>
    <string name="mei_toon_ka">美通卡特卖</string>
    <string name="regist_gift">注册有礼</string>
    <string name="my_favorite">我喜欢的</string>
    <string name="search">搜索</string>
    <string name="search_history">搜索记录</string>
    <string name="search_history_clear">清除历史记录</string>
    <string name="search_history_closely">最近搜过:</string>
    <string name="search_hot_goods">热门搜索</string>
    <string name="search_hot_goods_refresh">换一批</string>
    <string name="filter">筛选</string>
    <string name="list">列表</string>
    <string name="small_picture">小图</string>
    <string name="big_picture">大图</string>
    <string name="price">价格</string>
    <string name="sales">销量</string>
    <string name="tabbar_aecommend">推荐语</string>
    <string name="hot">最新</string>
    <string name="sort_by_default">精选</string>
    <string name="goods_list_empty">未搜索到相关宝贝</string>
    <string name="goods_list_sales">月销量：%s件</string>
    <string name="goods_detail_recommend">推荐:</string>
    <string name="goods_detail_tip">购物提示:</string>
    <string name="goods_detail">商品详情</string>
    <string name="goods_shooseg">选择商品</string>
    <string name="tabbar_lable">标签</string>
    <string name="goods_ptotoss">裁图</string>
    <string name="goods_mrecommend">精选</string>
    <string name="tabbar_renqi">人气</string>
    <string name="goods_guanzhu">关注</string>
    <string name="tabbar_comment">评论</string>
    <string name="goods_photos">相册</string>
    <string name="total_sales">销量</string>
    <string name="total_sales_unit">件</string>
    <string name="total_rates">评价</string>
    <string name="total_rates_unit">人</string>
    <string name="total_quantity">总库存</string>
    <string name="free_express">全国包邮</string>
    <string name="like">收藏</string>
    <string name="just_buy">立即购买</string>
    <string name="add_to_westore">加入微店</string>
    <string name="add_to_shoping_car">加入购物车</string>
    <string name="add_to_shoping_car_success">已加入购物车</string>
    <string name="goods_detail_buy_stock">(库存%s件)</string>
    <string name="goods_detail_stock_not_enough">库存不足，最多购买%s件</string>
    <string name="goods_detail_button_onsale">商品优惠</string>
    <string name="goods_detail_order_button_onsale">订单优惠</string>
    <string name="goods_detail_button_images">图文详情</string>
    <string name="goods_detail_button_imagess">精选</string>
    <string name="goods_detail_button_props">规格参数</string>
    <string name="goods_detail_button_propss">人气</string>
    <string name="goods_detail_button_comments">口碑推荐</string>
    <string name="goods_detail_button_commentss">关注</string>
    <string name="goods_detail_button_recommend">你可能还喜欢</string>
    <string name="please_choose_goods_properties">请选择商品属性</string>
    <string name="comments_avg_points">综合评分</string>
    <string name="shopping_car">购物车</string>
    <string name="shopping_car_checkout">支付</string>
    <string name="shopping_car_quantity">数量: </string>
    <string name="shopping_car_price">￥%s </string>
    <string name="shopping_car_total_price">合计:￥%s</string>
    <string name="shopping_car_save_price">为你节省:￥%.2f</string>
    <string name="shopping_car_empty">没有添加商品到购物车</string>
    <string name="shopping_car_delete">确定要将该商品移出购物车吗？</string>
    <string name="username">用户名</string>
    <string name="account_regist_email">电子邮箱</string>
    <string name="account_regist_passwd_hint">6-20位字母+数字或符号密码</string>
    <string name="account_login_username_hint">请输入手机号码</string>
    <string name="account_login_passwd">密码</string>
    <string name="account_login_passwd_hint">6-20位字母+数字或符号</string>
    <string name="account_login_vcode">验证码</string>
    <string name="account_login_submit">登录</string>
    <string name="account_login_forget_passwd">忘记密码？</string>
    <string name="account_login_regist">注册</string>
    <string name="account_login_fast_regist"><u>快速注册</u></string>
    <string name="account_login_third_party_account">社交账号登录:</string>
    <string name="account_login_third_party_message">使用以上账号登录</string>
    <string name="account_regist_input_phone_number">请输入手机号码</string>
    <string name="account_regist_offline_member">您已是线下注册会员,请填写密码。</string>
    <string name="account_regist_input_password">请设置密码</string>
    <string name="account_reset_password">重置密码</string>
    <string name="account_reset_conform_password">确认重置密码</string>
    <string name="account_regist_get_verify_code">获取验证码</string>
    <string name="account_regist_input_verify_code">请输入验证码</string>
    <string name="account_regist_input_inv_code">请输入邀请码</string>
    <string name="account_regist_verify_code_countdown">%s秒</string>
    <string name="account_regist_phone_number_invalid">请正确填写手机号码</string>
    <string name="account_regist_verify_code_error">请正确填写验证码</string>
    <string name="account_regist_password_error">请输入6-20位密码</string>
    <string name="account_regist_inv_code_error">请正确填写邀请码</string>
    <string name="account_regist_success">恭喜你，注册成功！</string>
    <string name="account_regist_upgrade_profile">注册成功请完善一下资料！</string>
    <string name="account_forget_password_phone_hint">用户名，手机号码或邮箱</string>
    <string name="next_step">下一步</string>
    <string name="account_forget_password_step2_message">我们已发送验证码到\n%s</string>
    <string name="account_forget_password_step2_countdown">%s</string>
    <string name="account_forget_password_step3_message">重置密码后，可以使用用户名+密码进行登录</string>
    <string name="submit">提交</string>
    <string name="my_address_book">地址本</string>
    <string name="accout_select_address_book">选择收货地址</string>
    <string name="accout_my_address_book">我的地址</string>
    <string name="my_address_book_editor">编辑收货地址</string>
    <string name="my_address_book_editor_username">收货人不能为空。</string>
    <string name="my_address_book_editor_phone">手机号码不能为空</string>
    <string name="my_address_book_editor_postal">邮政编码</string>
    <string name="my_address_book_editor_district">所在区域(必填)</string>
    <string name="my_address_book_editor_address">详细地址不能为空</string>
    <string name="please_improve_infomation">请完善信息</string>
    <string name="please_input_address">请输入地址</string>
    <string name="confirm_delete_address">确定要删除收货人「%s」吗？</string>
    <string name="please_input">请填写%s</string>
    <string name="set_default">设为默认</string>
    <string name="province">省份</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="add">新增</string>
    <string name="select_addr_tips">（请完善详细地址信息）</string>
    <string name="zone">街道、区域</string>
    <string name="invoice_info">发票信息</string>
    <string name="invoice_type">发票类型</string>
    <string name="invoice_type_personal">个人发票</string>
    <string name="invoice_type_company">公司发票</string>
    <string name="invoice_type_null">不开发票</string>
    <string name="invoice_title">发票抬头</string>
    <string name="invoice_title_summary">可输入个人或单位名称</string>
    <string name="invoice_content">发票内容</string>
    <string name="ticket">优惠券</string>
    <string name="ticket_add_useit">立即使用</string>
    <string name="ticket_add_message">输入站外获得的优惠券号码</string>
    <string name="ticket_unused">未使用</string>
    <string name="ticket_used">已使用</string>
    <string name="ticket_expired">已过期</string>
    <string name="ticket_number">优惠券号：%1$s</string>
    <string name="ticket_name">名称</string>
    <string name="ticket_valid_period">有效期至：%1$s</string>
    <string name="ticket_state">状态</string>
    <string name="ticket_empty">该单没有可以使用的优惠券</string>
    <string name="ticket_how_to"><u>如何获取优惠券</u></string>
    <string name="balance">余额: </string>
    <string name="money_unit">元</string>
    <string name="me_item_orders">我的订单</string>
    <string name="me_item_back">申请退换货</string>
    <string name="me_item_back_order">退换货订单</string>
    <string name="me_item_balance">我的余额</string>
    <string name="me_item_recomment">我的推荐</string>
    <string name="me_item_collect">我的收藏</string>
    <string name="me_item_address">我的地址</string>
    <string name="me_item_score">我的积分</string>
    <string name="me_item_coupon">我的优惠券</string>
    <string name="me_item_yingbang">我的积分</string>
    <string name="me_item_mymsg">我的消息</string>
    <string name="me_item_setting">设置 </string>
    <string name="me_item_help">帮助中心 </string>
    <string name="account_trade_paying">待付款</string>
    <string name="account_trade_shipping">待发货</string>
    <string name="account_trade_receiving">待收货</string>
    <string name="account_trade_return">退款/售后</string>
    <string name="account_trade_rating">待评论</string>
    <string name="account_my_store">我的微店</string>
    <string name="account_favorites">我的收藏</string>
    <string name="account_favorites_empty">暂无收藏的商品</string>
    <string name="account_logout">退出登录</string>
    <string name="account_logout_confirm">确定要退出当前登录的账号吗？</string>
    <string name="account_header_noname">未设置昵称</string>
    <string name="account_header_fans">%s\n粉丝</string>
    <string name="account_header_followed">%s\n关注</string>
    <string name="account_info_reset_password">修改登录密码</string>
    <string name="account_info_reset_phone">修改手机号码</string>
    <string name="account_info_reset_email">绑定邮箱号码</string>
    <string name="account_info_title">账户</string>
    <string name="account_score_online">线上积分</string>
    <string name="account_score_offline">门店积分</string>
    <string name="account_nickname_change">修改昵称</string>
    <string name="account_nickname_label">用户名:</string>
    <string name="account_reset_passwd">更改密码</string>
    <string name="account_reset_passwd_old">当前密码</string>
    <string name="account_reset_passwd_new">新密码</string>
    <string name="account_reset_passwd_renew">确认新的密码</string>
    <string name="account_reset_passwd_visible">显示密码</string>
    <string name="account_reset_passwd_message">密码由6-20位英文字母、数字或符号组成</string>
    <string name="account_reset_passwd_confirm_failed">两次输入密码不一致</string>
    <string name="account_profile_title">编辑个人资料</string>
    <string name="confirm_order_paytype">支付方式</string>
    <string name="confirm_order_paytype_online">在线支付</string>
    <string name="confirm_order_paytype_offline">门店支付</string>
    <string name="checkout_money_date">日期</string>
    <string name="checkout_money_amount">提现金额</string>
    <string name="checkout_money_state">状态</string>
</resources>